--- a/frontend/index.html
+++ b/frontend/index.html
@@ -31,5 +31,5 @@
     </body>
 
     <script src="./scripts/plugins/chart.js"></script>
-    <script src="./node_modules/axios/dist/axios.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </html>
